testsuite/tests/properties/invalid_lambda_arg_type/filtermap_no_index_2.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.filtermap(
            (e: Example) => e.as_bare_entity,
            (e: Bool) => e
        )
}
